--- a/src/Components/CONTACT/contact.styles.scss
+++ b/src/Components/CONTACT/contact.styles.scss
@@ -40,7 +40,7 @@
     .contact_content {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        column-gap: 225px;
+        column-gap: 100px;
         justify-content: center;
 
 
@@ -82,6 +82,13 @@
             }
         }
 
+        .error_message {
+                    color: red;
+                    font-size: 10px;
+                    height: 8px;
+                   
+                }
+
         form {
             display: flex;
             flex-direction: column;
@@ -98,7 +105,7 @@
             .input_content {
                 display: flex;
                 width: 100%;
-                height: 67px;
+                height: 73px;
 
                 .input_margin {
                     margin-right: 20px;
@@ -107,6 +114,7 @@
                 .error_message {
                     color: red;
                     font-size: 10px;
+                   
                 }
 
                 input {
