--- a/src/Components/HOME/home.styles.scss
+++ b/src/Components/HOME/home.styles.scss
@@ -82,7 +82,19 @@
 }
 
 
-@media screen and (max-width: 900px) {
+
+@media screen and (max-width: 499px) {
+    .home_container {
+
+        .home_title {
+            font-size: 90px !important;
+            line-height: 4rem !important;
+        }
+    }
+}
+
+
+@media screen and (min-width: 500px) and (max-width: 900px) {
     .home_container {
 
         .home_title {
