--- a/src/Components/CONTACT/contact.styles.scss
+++ b/src/Components/CONTACT/contact.styles.scss
@@ -67,18 +67,19 @@
         .contact_right {
             height: 410px;
             .feedback_message {
-                font-size: 13px;
+                font-size: 12px;
                 font-weight: bold;
                 margin-top: 40px;
                 background-color: var(--blue-color);
                 text-align: center;
-                padding: 15px;
+                padding: 15px 6px;
                 color: var(--white-color);
                 border-radius: 6px;
 
                 -webkit-box-shadow: -2px 1px 20px 0px rgba(0, 0, 0, 0.75);
                 -moz-box-shadow: -2px 1px 20px 0px rgba(0, 0, 0, 0.75);
                 box-shadow: -2px 1px 20px 0px rgba(0, 0, 0, 0.75);
+                transition: all 0.5s ease-in-out;
             }
         }
 
