changed header text

--- a/src/Components/HOME/home.styles.scss
+++ b/src/Components/HOME/home.styles.scss
@@ -76,6 +76,10 @@
                 font-size: 150px;
                 line-height: 5rem;
                 font-family: 'Cabin Sketch', cursive;
+
+                .frgmnt_2{
+                    margin-top: 20px;
+                }
             }
         }
     }
