--- a/src/Components/HEADER/header.styles.scss
+++ b/src/Components/HEADER/header.styles.scss
@@ -13,15 +13,15 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        background-color: var(--blue-color);
+        background-color: var(--white-color);
         padding: 5px 0px;
         align-items: center;
         z-index: 1100;
 
 
         .nav_logo {
-            color: var(--white-color);
-            text-transform: uppercase;
+            color: var(--blue-color);
+            text-transform: capitalize;
             font-size: 50px;
             font-family: 'Cabin Sketch', cursive;
         }
@@ -45,10 +45,9 @@
                     list-style: none;
                     margin-left: 52px;
                     padding-right: 25px;
-
                     a {
                         text-decoration: none;
-                        color: #fff;
+                        color: var(--blue-color);
                         font-weight: 600;
 
                         &:hover {
@@ -79,7 +78,7 @@
         }
 
         .toggle_nav_content {
-            background-image: url('./../../ASSETS/menu.png');
+            background-image: url('./../../ASSETS/menu-open-junes.jpg');
             background-repeat: no-repeat;
             width: 30px;
             height: 30px;
@@ -91,7 +90,7 @@
             padding-right: 25px;
 
             &.active {
-                background-image: url('./../../ASSETS/close.png');
+                background-image: url('./../../ASSETS/close-menu-junes.jpg');
                 background-repeat: no-repeat;
                 width: 30px;
                 height: 30px;
