--- a/src/Components/HOME/home.styles.scss
+++ b/src/Components/HOME/home.styles.scss
@@ -7,9 +7,7 @@
     position: relative;
     height: 89vh;
     width: 100%;
-    overflow: hidden;
     padding-top: 68px;
-
 
     .square_color {
         position: absolute;
@@ -60,50 +58,87 @@
             left: 0;
             width: 100%;
             height: 100%;
-
-
-
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            .home_title {
-                display: flex;
-                flex-direction: column;
-                color: var(--white-color);
-                justify-content: center;
-                align-items: center;
-                padding-top: 50px;
-                font-size: 150px;
-                line-height: 5rem;
-                font-family: 'Cabin Sketch', cursive;
-
-                .frgmnt_2{
-                    margin-top: 20px;
+            .home-title-content{
+                width: 45%;
+                p{
+                    line-height: 30px;
+                    font-family: 'Cabin Sketch', cursive;
+                    margin-bottom: 17px;
                 }
+                & > div {
+                    text-align: center;
+                }
+                .go-to-about{
+                    padding: 10px;
+                    background-color: var(--blue-color);
+                    color: var(--white-color);
+                    text-decoration: none;
+                    border-radius: 4px;
+                    &:hover{
+                        opacity: 0.6;
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .home{
+        height: auto;
+        .home-center{
+            margin: 150px 0 !important;
+        }
+        .go-to-about{
+            padding: 6px !important;
+        }
+    }
+}
+
+@media screen and (max-width: 751px) {
+    .home{
+        height: auto;
+        .home-center{
+            margin: 100px 0 0 0;
+        }
+    .home_container {
+        .home_title_container{
+            right: 0 !important;
+            display: block;
+            top: 35%;
+        .home-title-content{
+            width: 75% !important;
+            margin: auto;
+            P{
+                line-height: 17px;
+                font-size: 12px;
             }
         }
     }
+    }
+}
 }
 
 
-
-@media screen and (max-width: 499px) {
-    .home_container {
-
-        .home_title {
-            font-size: 90px !important;
-            line-height: 4rem !important;
+@media screen and (min-width: 752px) and (max-width: 1105px) {
+    .home{
+        height: auto;
+        .home-center{
+            margin: 100px 0;
         }
-    }
-}
-
-
-@media screen and (min-width: 500px) and (max-width: 900px) {
     .home_container {
-
-        .home_title {
-            font-size: 120px !important;
-            line-height: 4rem !important;
+        .home_title_container{
+            right: 0 !important;
+            display: block;
+            top: 35%;
+        .home-title-content{
+            width: 75% !important;
+            margin: auto;
         }
-    }
+    }}}
 }
