--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ code {
   overflow-x: hidden;
   width: 100%;
 }
+
+h1{
+  letter-spacing: 8px;
+}
+
+p,h1,h2,h3,h4,h5,h6 {
+  line-height: 30px;
+}
