--- a/src/Components/CONTACT/contact.styles.scss
+++ b/src/Components/CONTACT/contact.styles.scss
@@ -10,6 +10,11 @@
     justify-content: center;
     align-items: center;
 
+    a.link{
+        text-decoration: none;
+        color: var(--text-color);
+    }
+
     .header_contact {
         h1 {
             font-size: 30px;
