--- a/src/Components/PROJECTS/project.style.scss
+++ b/src/Components/PROJECTS/project.style.scss
@@ -100,7 +100,15 @@
 
                     &:hover{
                         background-color: #fff;
-                        color: rgba(47,41,51,0.9);
+                    }
+
+                    a{
+                        text-decoration: none;
+                        color: #fff;
+
+                        &:hover{
+                            color: var(--blue-color);
+                        }
                     }
 
                 }
