--- a/src/Components/HEADER/header.styles.scss
+++ b/src/Components/HEADER/header.styles.scss
@@ -16,6 +16,8 @@
         padding: 5px 10px;
         align-items: center;
         z-index: 1100;
+        -webkit-box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.12); 
+        box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.12);
 
 
         .nav_logo {
