--- a/src/Components/ABOUT/about.styles.scss
+++ b/src/Components/ABOUT/about.styles.scss
@@ -115,6 +115,10 @@
                 text-align: center;
                 font-size: 14px;
             }
+
+            .profil_content{
+                padding: 0 10px !important;
+            }
         }
     }
 }
